icis-apidoc-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: icis-apidoc-deployment
  namespace: sa-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: icis-apidoc
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: icis-apidoc
    spec:
      containers:
      - name: icis-apidoc
        image: nexus.dspace.kt.co.kr/icis/icis-apidoc
        ports:
        - name: http
          containerPort: 8080
      hostAliased:
      - ip: 10.217.137.26
        hostnames:
        - apm-server-route-sa-dedi.apps.cluster01.cz-dev.icis.co.kr
  minReadySeconds: 3
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate

#  strategy:
#    blueGreen:
#      previewService: icis-apidoc-preview
#      activeService: icis-apidoc-active
#      autoPromotionEnabled: false
#      previewReplicaCount: 1
#      scaleDownDelayseconds: 60

#  strategy:
#    canary:
#      maxSurge: 1
#      maxUnavailabel: 1
