icis-apidoc-svc-active.yaml
apiVersion: v1
kind: Service
metadata: 
  name: icis-apidoc-active
  namespace: sa-app
  labels:
    app: icis-apidoc
spec:
  selector:
    app: icis-apidoc
  port: 
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http
