icis-apidoc-svc-preview.yaml
apiVersion: v1
kind: Service
metadata: 
  name: icis-apidoc-preview
  namespace: sa-app
  labels:
    app: icis-apidoc
spec:
  selector:
    app: icis-apidoc
  port: 
  - protocol: TCP
    name: http
    port: 9090
    targetPort: http
